scripts/nullaway/annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8.txt
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:27: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return stats;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Skill.java:20: error: [NullAway] initializer method does not guarantee @NonNull fields name (line 11), damage (line 15), recovery (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Skill(EffectType type) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:42: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return hp;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:21: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return job;
        ^
    (see http://t.uber.com/nullaway )
5 errors
